--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,7 @@ body {
 
 .container {
 	min-height: 100%;
-	width: 1300px;
+	width: 100%;
 	margin: 0 auto;
 	padding: 0 30px;
 	overflow: hidden;
@@ -145,3 +145,6 @@ body {
 	font-size: 50px;
 	color: #f00;
 }
+
+
+/* #DA70D6 */
